# tcgen

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.sh  tdd.sh
.github/workflows/: tests.yaml
tcgen/: __init__.py  tcgen.py
tcgen/dtype/: __init__.py  bool.py  char.py  dtype.py  int32.py  int64.py  ndarray.py  prom.py  str.py
test/: test_dtype_int32.py
