[metadata]
name = tcgen
version = 0.1.0
author = Luka Nedimović
author_email = lukazen123@gmail.com
description = Test-case generator for competitive programming problem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/tcgen
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7